2001-01-24  Sam Steingold  <sds@gnu.org>

	* lisp/bbdb-merge.el (bbdb-merge-file): bugfix:
	the parameter for `match-fun' is `rec', not `r'

2001-01-18  Ronan Waide  <waider@waider.ie>

	* lisp/bbdb-vm.el: Proper fix for VM windowing bug

2001-01-17  Robert.Fenk@gmx.de

	* lisp/bbdb.el (bbdb-always-add-addresses): Docfix

	* lisp/bbdb-vm.el (bbdb/vm-update-record):
	Restored old behavior of returning one record
	(bbdb/vm-update-records-mode):
	(bbdb/vm-update-records):
	Enhanced in order to allow annotating only new messages, which is
	now the default.  This avoids the annoying questions repetition
	weather to add records for unknown persons after restarting a
	VM session.

	* lisp/bbdb-w3.el (bbdb-www-grab-homepage):
	Fix to read just one record not a list of records

	* lisp/bbdb-xemacs.el (bbdb-sounds-directory):
	(bbdb-sound-volume):
	(bbdb-load-touchtones):
	Added variables & functions for Xemacs native sound support
	used by	bbdb-dialing stuff

	* lisp/bbdb-com.el (bbdb-complete-name):
	If the completion is done then cycle thru the nets or when called
	with a prefix arg then display a list of all nets.
	(bbdb-dial-local-prefix-alist):
	Used to replace parts of the number depending on a regexp.
	(bbdb-modem-dial): command used for dialing with the modem.
	(bbdb-modem-device): the modem device
	(bbdb-dial-number): new function which performs the dialing of a
	number.  Depending on the settings it uses the play command,
	native Xemacs sound support or the modem device.
	(bbdb-dial): modified in order to use the new stuff

2001-01-08  Waider  <waider@waider.ie>

	* lisp/bbdb-hooks.el:
	  Added Bill Carpenter-provided function
	    'bbdb-ignore-selected-messages-confirmation'

2001-01-03  Didier Verna  <didier@xemacs.org>

	* aclocal.m4: new file (Autoconf support).
	* configure.in: ditto.
	* install-sh: ditto.
	* Makefile.in: ditto.
	* lisp/Makefile.in: ditto.
	* texinfo/Makefile.in: ditto.

	* configure: new file (generated by Autoconf, but should be