@@ -386,18 +386,21 @@ more details."
 
 ;;----------------------------------------------------------------------------
 ;; Emacs 20.3 seems to miss the function replace-in-string?
-(unless (boundp 'replace-in-string)
-  ;; actually this is `dired-replace-in-string' slightly modified
-  (defun replace-in-string (string regexp newtext &optional literal)
-    ;; Replace REGEXP with NEWTEXT everywhere in STRING and return result.
-    ;; NEWTEXT is taken literally---no \\DIGIT escapes will be recognized.
-    (let ((result "") (start 0) mb me)
-      (while (string-match regexp string start)
-        (setq mb (match-beginning 0)
-              me (match-end 0)
-              result (concat result (substring string start mb) newtext)
-              start me))
-      (concat result (substring string start)))))
+(unless (fboundp 'replace-in-string)
+  (if (fboundp 'replace-regexp-in-string) ; defined in e21
+      (defun replace-in-string (string regexp newtext &optional literal)
+        (replace-regexp-in-string string regexp newtext nil literal))
+      ;; actually this is `dired-replace-in-string' slightly modified
+      (defun replace-in-string (string regexp newtext &optional literal)
+        ;; Replace REGEXP with NEWTEXT everywhere in STRING and return result.
+        ;; NEWTEXT is taken literally---no \\DIGIT escapes will be recognized.
+        (let ((result "") (start 0) mb me)
+          (while (string-match regexp string start)
+            (setq mb (match-beginning 0)
+                  me (match-end 0)
+                  result (concat result (substring string start mb) newtext)
+                  start me))
+          (concat result (substring string start))))))
 
 (defcustom bbdb-snarf-nice-real-name-regexp "[._,\t\n ]+"
   "*Regexp matching string which `bbdb-snarf-nice-real-name' will replace by
